<resources>
    <string name="app_name">Riddle Me This!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Riddle Me This!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="login_forgotPassword"><u>Forgot Your Password?</u></string>
    <string name="login_noAccount"><u>Don\'t Have an Account?</u></string>
    <string name="login_staylogged">Keep me logged in</string>
    <string name="createAccount_alreadyhave"><u>Already Have an Account?</u></string>
    <string name="resetpassword_remember"><u>Remember Your Password?</u></string>
    <string name="all_fault">Error Code %s: %s</string>
    <string name="myAccount_email">Email: %s</string>
    <string name="riddle">riddle</string>
    <string name="riddleTitle">Riddle:</string>
    <string name="answer">TextView</string>
    <string name="reveal_answer">Reveal Answer</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="createdriddle">Riddle</string>
    <string name="createdanswer">Answer</string>
    <string name="button">Button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
