<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewMyRiddleFragment" >

    <TextView
        android:id="@+id/textview_viewfragment_riddle"
        android:layout_width="402dp"
        android:layout_height="257dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/riddle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_viewfragment_riddletitle" />

    <TextView
        android:id="@+id/textview_viewfragment_riddletitle"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/riddleTitle"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_viewfragment_answer"
        android:layout_width="397dp"
        android:layout_height="242dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:text="@string/answer"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_viewfragment_reveal" />

    <Switch
        android:id="@+id/switch_viewfragment_reveal"
        android:layout_width="157dp"
        android:layout_height="56dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/reveal_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_viewfragment_riddle" />

    <Button
        android:id="@+id/button_viewmyriddles_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/textview_viewfragment_riddle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_viewmyriddles_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/textview_viewfragment_riddle"
        app:layout_constraintEnd_toStartOf="@+id/textview_viewfragment_riddletitle"
        app:layout_constraintStart_toEndOf="@+id/button_viewmyriddles_edit"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_viewmyriddlefragment_viewhint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="View Hint"
        app:layout_constraintBottom_toTopOf="@+id/textview_viewfragment_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/switch_viewfragment_reveal"
        app:layout_constraintTop_toBottomOf="@+id/textview_viewfragment_riddle" />

</androidx.constraintlayout.widget.ConstraintLayout>